# CppEvaluatorBase

./: .gitignore  CMakeLists.txt  CppEvaluatorBase.hpp  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  _ceb.hpp
src/basic/: CMakeLists.txt  _cebbasic.hpp  board.cpp  board.hpp  error.cpp  error.hpp  player.cpp  player.hpp
src/evaluator/: _cebevaluator.hpp  evbase.hpp
test/: CMakeLists.txt  README.md
test/basic_test/: board_test.cpp  error_test.cpp  player_test.cpp
test/testcase/: boardcase.cpp  boardcase.hpp
test/testutil/: testutil.hpp
